{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 36,
  "lineage": "5d25b1bc-b37c-3241-3227-c2b085fb9ad9",
  "resources": [
    {
      "module": "module.lamp-stack",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "myvpc_main_route_table",
      "provider": "module.lamp-stack.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:129609417156:route-table/rtb-091fa5eb70f4de87d",
            "default_route_table_id": "rtb-091fa5eb70f4de87d",
            "id": "rtb-091fa5eb70f4de87d",
            "owner_id": "129609417156",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myvpc_main_route_table"
            },
            "tags_all": {
              "Name": "myvpc_main_route_table"
            },
            "vpc_id": "vpc-02b788b3dd041576c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lamp-stack.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-stack",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_web_instance",
      "provider": "module.lamp-stack.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0937dcc711d38ef3f",
            "arn": "arn:aws:ec2:ap-south-1:129609417156:instance/i-0d8ca1c8b27a99587",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d8ca1c8b27a99587",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awskey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07219588065417e95",
            "private_dns": "ip-10-0-1-27.ap-south-1.compute.internal",
            "private_ip": "10.0.1.27",
            "public_dns": "ec2-3-108-228-110.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.228.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c7aaa4e8d341b15f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0255e2c8fd374c55c",
            "tags": {
              "Name": "my_web_instance"
            },
            "tags_all": {
              "Name": "my_web_instance"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "my_web_instance_volume"
            },
            "vpc_security_group_ids": [
              "sg-0367fa43622056038"
            ]
          },
          "dependencies": [
            "module.lamp-stack.aws_security_group.web_security_group",
            "module.lamp-stack.aws_subnet.myvpc_public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-stack",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myvpc_internet_gateway",
      "provider": "module.lamp-stack.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:129609417156:internet-gateway/igw-0c700b58ec6ad2a5a",
            "id": "igw-0c700b58ec6ad2a5a",
            "owner_id": "129609417156",
            "tags": {
              "Name": "myvpc_internet_gateway"
            },
            "tags_all": {
              "Name": "myvpc_internet_gateway"
            },
            "vpc_id": "vpc-02b788b3dd041576c"
          },
          "dependencies": [
            "module.lamp-stack.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-stack",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myvpc_private_subnet_route_table",
      "provider": "module.lamp-stack.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:129609417156:route-table/rtb-068679a1938ae0e33",
            "id": "rtb-068679a1938ae0e33",
            "owner_id": "129609417156",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myvpc_private_subnet_route_table"
            },
            "tags_all": {
              "Name": "myvpc_private_subnet_route_table"
            },
            "vpc_id": "vpc-02b788b3dd041576c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lamp-stack.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-stack",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myvpc_public_subnet_route_table",
      "provider": "module.lamp-stack.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:129609417156:route-table/rtb-08d1cd2dd5bfeab2a",
            "id": "rtb-08d1cd2dd5bfeab2a",
            "owner_id": "129609417156",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c700b58ec6ad2a5a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myvpc_public_subnet_route_table"
            },
            "tags_all": {
              "Name": "myvpc_public_subnet_route_table"
            },
            "vpc_id": "vpc-02b788b3dd041576c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lamp-stack.aws_internet_gateway.myvpc_internet_gateway",
            "module.lamp-stack.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myvpc_private_subnet_one_route_table_assosiation",
      "provider": "module.lamp-stack.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004f90d97b7d3fee2",
            "route_table_id": "rtb-068679a1938ae0e33",
            "subnet_id": "subnet-09e90ea82b5074b4f"
          },
          "dependencies": [
            "module.lamp-stack.aws_route_table.myvpc_private_subnet_route_table",
            "module.lamp-stack.aws_subnet.myvpc_private_subnet_one",
            "module.lamp-stack.aws_vpc.myvpc",
            "module.lamp-stack.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myvpc_private_subnet_two_route_table_assosiation",
      "provider": "module.lamp-stack.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071d736016f5a34f3",
            "route_table_id": "rtb-068679a1938ae0e33",
            "subnet_id": "subnet-0e27ad882e03016ea"
          },
          "dependencies": [
            "module.lamp-stack.aws_subnet.myvpc_private_subnet_two",
            "module.lamp-stack.aws_vpc.myvpc",
            "module.lamp-stack.data.aws_availability_zones.availability_zones",
            "module.lamp-stack.aws_route_table.myvpc_private_subnet_route_table"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myvpc_public_subnet_route_table",
      "provider": "module.lamp-stack.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1f1c5e1f98678f2",
            "route_table_id": "rtb-08d1cd2dd5bfeab2a",
            "subnet_id": "subnet-0255e2c8fd374c55c"
          },
          "dependencies": [
            "module.lamp-stack.data.aws_availability_zones.availability_zones",
            "module.lamp-stack.aws_internet_gateway.myvpc_internet_gateway",
            "module.lamp-stack.aws_route_table.myvpc_public_subnet_route_table",
            "module.lamp-stack.aws_subnet.myvpc_public_subnet",
            "module.lamp-stack.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-stack",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "module.lamp-stack.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:129609417156:security-group/sg-025cbabb34735e5d6",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-025cbabb34735e5d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db_security_group",
            "name_prefix": "",
            "owner_id": "129609417156",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02b788b3dd041576c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lamp-stack.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-stack",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_security_group",
      "provider": "module.lamp-stack.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:129609417156:security-group/sg-0367fa43622056038",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0367fa43622056038",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_security_group",
            "name_prefix": "",
            "owner_id": "129609417156",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myvpc_web_security_group"
            },
            "tags_all": {
              "Name": "myvpc_web_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b788b3dd041576c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lamp-stack.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-stack",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_egress",
      "provider": "module.lamp-stack.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-823671080",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-025cbabb34735e5d6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lamp-stack.aws_security_group.db_security_group",
            "module.lamp-stack.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-377383116",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-025cbabb34735e5d6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lamp-stack.aws_security_group.db_security_group",
            "module.lamp-stack.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-stack",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_ingress",
      "provider": "module.lamp-stack.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3079050135",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-025cbabb34735e5d6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lamp-stack.aws_security_group.db_security_group",
            "module.lamp-stack.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-281465767",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-025cbabb34735e5d6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lamp-stack.aws_security_group.db_security_group",
            "module.lamp-stack.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-stack",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_egress",
      "provider": "module.lamp-stack.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-191071662",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0367fa43622056038",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lamp-stack.aws_security_group.web_security_group",
            "module.lamp-stack.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3876785553",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0367fa43622056038",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lamp-stack.aws_security_group.web_security_group",
            "module.lamp-stack.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-4019042248",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0367fa43622056038",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lamp-stack.aws_security_group.web_security_group",
            "module.lamp-stack.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-416284624",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0367fa43622056038",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lamp-stack.aws_vpc.myvpc",
            "module.lamp-stack.aws_security_group.web_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-stack",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_ingress",
      "provider": "module.lamp-stack.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3009924670",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0367fa43622056038",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lamp-stack.aws_security_group.web_security_group",
            "module.lamp-stack.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-99455883",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0367fa43622056038",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lamp-stack.aws_security_group.web_security_group",
            "module.lamp-stack.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-391308385",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0367fa43622056038",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lamp-stack.aws_security_group.web_security_group",
            "module.lamp-stack.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-80297599",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0367fa43622056038",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lamp-stack.aws_security_group.web_security_group",
            "module.lamp-stack.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-stack",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myvpc_private_subnet_one",
      "provider": "module.lamp-stack.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:129609417156:subnet/subnet-09e90ea82b5074b4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-09e90ea82b5074b4f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "129609417156",
            "tags": {
              "Name": "myvpc_private_subnet_one"
            },
            "tags_all": {
              "Name": "myvpc_private_subnet_one"
            },
            "vpc_id": "vpc-02b788b3dd041576c"
          },
          "dependencies": [
            "module.lamp-stack.aws_vpc.myvpc",
            "module.lamp-stack.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-stack",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myvpc_private_subnet_two",
      "provider": "module.lamp-stack.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:129609417156:subnet/subnet-0e27ad882e03016ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0e27ad882e03016ea",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "129609417156",
            "tags": {
              "Name": "myvpc_private_subnet_two"
            },
            "tags_all": {
              "Name": "myvpc_private_subnet_two"
            },
            "vpc_id": "vpc-02b788b3dd041576c"
          },
          "dependencies": [
            "module.lamp-stack.aws_vpc.myvpc",
            "module.lamp-stack.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-stack",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myvpc_public_subnet",
      "provider": "module.lamp-stack.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:129609417156:subnet/subnet-0255e2c8fd374c55c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0255e2c8fd374c55c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "129609417156",
            "tags": {
              "Name": "myvpc_public_subnet"
            },
            "tags_all": {
              "Name": "myvpc_public_subnet"
            },
            "vpc_id": "vpc-02b788b3dd041576c"
          },
          "dependencies": [
            "module.lamp-stack.aws_vpc.myvpc",
            "module.lamp-stack.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-stack",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "module.lamp-stack.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:129609417156:vpc/vpc-02b788b3dd041576c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0856bb0b84e47dab4",
            "default_route_table_id": "rtb-091fa5eb70f4de87d",
            "default_security_group_id": "sg-0ac3685b85cd381c4",
            "dhcp_options_id": "dopt-37f7385c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02b788b3dd041576c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-091fa5eb70f4de87d",
            "owner_id": "129609417156",
            "tags": {
              "Name": "myvpc"
            },
            "tags_all": {
              "Name": "myvpc"
            }
          }
        }
      ]
    }
  ]
}